force-app/main/default/objects/Course__c/fields/Credit__c.field-meta.xml
<CustomField>
    <fullName>Credit__c</fullName>
    <defaultValue>50</defaultValue>
    <label>Credit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>