force-app/main/default/objects/Course__c/fields/Tutor__c.field-meta.xml
<CustomField>
    <fullName>Tutor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tutor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria. Selected person must be a tutor.</errorMessage>
        <filterItems>
            <field>Person__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Tutor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Person__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>