force-app/main/default/objects/Course__c/validationRules/Between_1_and_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Between_1_and_100</fullName>
    <active>true</active>
    <errorConditionFormula>OR( Credit__c &lt;1,Credit__c &gt;100)</errorConditionFormula>
    <errorDisplayField>Credit__c</errorDisplayField>
    <errorMessage>Credit must be between 1 and 100</errorMessage>
</ValidationRule>