force-app/main/default/objects/Course__c/validationRules/Cannot_be_unchecked.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_be_unchecked</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNEW())  &amp;&amp;   NOT(Completed__c)&amp;&amp;  ISCHANGED(Completed__c)</errorConditionFormula>
    <errorDisplayField>Completed__c</errorDisplayField>
    <errorMessage>The course cannot be uncompleted</errorMessage>
</ValidationRule>