force-app/main/default/objects/Course__c/validationRules/Enforcing_Quota.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforcing_Quota</fullName>
    <active>true</active>
    <errorConditionFormula>Attendees_Count__c &gt; Attendees_Quota__c</errorConditionFormula>
    <errorMessage>Number of enrolled students cannot exceed quota.</errorMessage>
</ValidationRule>