force-app/main/default/objects/Course__c/validationRules/Uneditable.validationRule-meta.xml
<ValidationRule>
    <fullName>Uneditable</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Credit__c )</errorConditionFormula>
    <errorDisplayField>Credit__c</errorDisplayField>
    <errorMessage>Credit cannot be changed after creation.</errorMessage>
</ValidationRule>