force-app/main/default/objects/Course__c/validationRules/Uneditable_After_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Uneditable_After_Creation</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED(Attendees_Quota__c)</errorConditionFormula>
    <errorDisplayField>Attendees_Quota__c</errorDisplayField>
    <errorMessage>Attendees Quota cannot be edited after creation</errorMessage>
</ValidationRule>