force-app/main/default/objects/Course__c/validationRules/Uneditable_Course.validationRule-meta.xml
<ValidationRule>
    <fullName>Uneditable_Course</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Name )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Course name may not be edited</errorMessage>
</ValidationRule>