force-app/main/default/objects/Course__c/validationRules/Within_Bounds.validationRule-meta.xml
<ValidationRule>
    <fullName>Within_Bounds</fullName>
    <active>true</active>
    <errorConditionFormula>(ISNEW()  &amp;&amp;  Start_Date__c &lt; TODAY() || Start_Date__c&gt;= End_Date__c) ||  ISCHANGED( Start_Date__c )</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start date cannot be in the past and must be before the end date.</errorMessage>
</ValidationRule>