force-app/main/default/objects/Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tutor__c</columns>
    <columns>Credit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>