force-app/main/default/objects/Course__c/listViews/Finished.listView-meta.xml
<ListView>
    <fullName>Finished</fullName>
    <columns>NAME</columns>
    <columns>Tutor__c</columns>
    <columns>Credit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Completed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Finished</label>
</ListView>