force-app/main/default/objects/Course__c/listViews/Started.listView-meta.xml
<ListView>
    <fullName>Started</fullName>
    <columns>NAME</columns>
    <columns>Tutor__c</columns>
    <columns>Credit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Completed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Started</label>
</ListView>